media-server/nzbhydra2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbhydra2
  namespace: media-server
spec:
  selector:
    matchLabels:
      app: nzbhydra2
  strategy:
    type: Recreate # This makes sure only one instance is running at a time
  template:
    metadata:
      labels:
        app: nzbhydra2
    spec:
      containers:
        - name: nzbhydra2
          image: lscr.io/linuxserver/nzbhydra2:5.1.10
          ports:
            - containerPort: 5076
              name: http
          volumeMounts:
            - name: config-pv
              mountPath: /config
      securityContext:
        fsGroup: 100
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config-pv
          persistentVolumeClaim:
            claimName: nzbhydra2-config
