media-server/nzbhydra2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbhydra2
  namespace: media-server
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: nzbhydra2
